tests/compile-fail/compile_fail__pseudo_in_const_call.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: unexpected token `const`
   ┌─ <input>:25:9
   │
25 │         const int foo(int x) { return x; }
   │         ^^^^^ unexpected token
   │
   = 
     Expected one of "#", ",", "]", "anim", "ecli", "entry", "float", "inline", "int", "meta", "script", "sub", "timeline", "void" or "}"


